added gru cell for gated feedback rnn and updated the notebook accordingly

--- a/gfr-show.ipynb
+++ b/gfr-show.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -91,25 +91,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10/10 [==============================] - 10s - loss: 4.1716    \n",
-      "\n",
-      "running traditional lstm using static run took 66.7125449181 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run gfr.py\n",
     "\n",
     "from time import time\n",
     "\n",
-    "def build_multi_lstm_graph_with_list(\n",
+    "def build_multi_rnn_graph_with_list(\n",
     "    state_size=100,\n",
     "    num_classes=vocab_size,\n",
     "    batch_size=32,\n",
@@ -117,7 +107,8 @@
     "    num_layers=3,\n",
     "    learning_rate=1e-4,\n",
     "    use_gfr=False,\n",
-    "    use_dynamic_run=True):\n",
+    "    use_dynamic_run=True,\n",
+    "    use_gru_cell=False):\n",
     "    x = tf.placeholder(tf.int32, [batch_size, num_steps], name='inputs_placeholder')\n",
     "    y = tf.placeholder(tf.int32, [batch_size, num_steps], name='labels_placeholder')\n",
     "    \n",
@@ -126,6 +117,12 @@
     "            if not use_dynamic_run else tf.nn.embedding_lookup(embeddings, x)\n",
     "    cell = tf.nn.rnn_cell.LSTMCell(num_units=state_size, state_is_tuple=True) \\\n",
     "            if not use_gfr else lambda pos : GatedFeedbackLSTMCell(num_units=state_size, layer_pos=pos)\n",
+    "    if use_gfr:\n",
+    "        if use_gru_cell: cell = lambda pos : GatedFeedbackGRUCell(num_units=state_size, layer_pos=pos)\n",
+    "        else: cell = lambda pos : GatedFeedbackLSTMCell(num_units=state_size, layer_pos=pos)\n",
+    "    else:\n",
+    "        if use_gru_cell: cell = tf.nn.rnn_cell.GRUCell(num_units=state_size)\n",
+    "        else: cell = tf.nn.rnn_cell.LSTMCell(num_units=state_size)\n",
     "    multi_cell = tf.nn.rnn_cell.MultiRNNCell([cell] * num_layers) \\\n",
     "            if not use_gfr else MultiGatedFeedbackRNNCell([cell(i) for i in range(num_layers)])\n",
     "    init_state = multi_cell.zero_state(batch_size, tf.float32)\n",
@@ -181,107 +178,219 @@
     "    def __enter__(self):\n",
     "        self._time = time()\n",
     "    def __exit__(self, *args):\n",
-    "        print('\\nrunning {} took {} seconds'.format(self._title, time() - self._time))\n",
-    "        \n",
-    "tf.reset_default_graph()\n",
-    "with Timed('traditional lstm using static run'), tf.Graph().as_default():\n",
-    "    graph = build_multi_lstm_graph_with_list(use_gfr=False, use_dynamic_run=False)\n",
-    "    train_rnn(graph, 10)    "
+    "        print('\\nrunning {} took {} seconds'.format(self._title, time() - self._time))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10/10 [==============================] - 23s - loss: 4.1698    \n",
+      "10/10 [==============================] - 7s - loss: 4.1699     \n",
       "\n",
-      "running gated feedback lstm using static run took 116.424118042 seconds\n"
+      "running traditional lstm using static run took 59.350481033325195 seconds\n",
+      "final loss value is 4.16607\n"
+     ]
+    }
+   ],
+   "source": [
+    "tf.reset_default_graph()\n",
+    "with Timed('traditional lstm using static run'), tf.Graph().as_default():\n",
+    "    graph = build_multi_rnn_graph_with_list(use_gfr=False, use_dynamic_run=False, use_gru_cell=False)\n",
+    "    losses = train_rnn(graph, 10)    \n",
+    "print('final loss value is', losses[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10/10 [==============================] - 8s - loss: 4.1625     \n",
+      "\n",
+      "running traditional gru using static run took 61.83644509315491 seconds\n",
+      "final loss value is 4.15009\n"
+     ]
+    }
+   ],
+   "source": [
+    "tf.reset_default_graph()\n",
+    "with Timed('traditional gru using static run'), tf.Graph().as_default():\n",
+    "    graph = build_multi_rnn_graph_with_list(use_gfr=False, use_dynamic_run=False, use_gru_cell=True)\n",
+    "    losses = train_rnn(graph, 10)   \n",
+    "print('final loss value is', losses[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10/10 [==============================] - 16s - loss: 4.1720    \n",
+      "\n",
+      "running gated feedback lstm using static run took 104.72134709358215 seconds\n",
+      "final loss value is 4.16308\n"
      ]
     }
    ],
    "source": [
     "tf.reset_default_graph()\n",
     "with Timed('gated feedback lstm using static run'), tf.Graph().as_default():\n",
-    "    graph = build_multi_lstm_graph_with_list(use_gfr=True, use_dynamic_run=False)\n",
-    "    train_rnn(graph, 10)    "
+    "    graph = build_multi_rnn_graph_with_list(use_gfr=True, use_dynamic_run=False, use_gru_cell=False)\n",
+    "    losses = train_rnn(graph, 10)    \n",
+    "print('final loss value is', losses[-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10/10 [==============================] - 7s - loss: 4.1696     \n",
+      "10/10 [==============================] - 16s - loss: 4.1640    \n",
       "\n",
-      "running traditional lstm using dynamic rnn took 11.3640809059 seconds\n"
+      "running gated feedback gru using static run took 101.49290704727173 seconds\n",
+      "final loss value is 4.15248\n"
+     ]
+    }
+   ],
+   "source": [
+    "tf.reset_default_graph()\n",
+    "with Timed('gated feedback gru using static run'), tf.Graph().as_default():\n",
+    "    graph = build_multi_rnn_graph_with_list(use_gfr=True, use_dynamic_run=False, use_gru_cell=True)\n",
+    "    losses = train_rnn(graph, 10)    \n",
+    "print('final loss value is', losses[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10/10 [==============================] - 6s - loss: 4.1698     \n",
+      "\n",
+      "running traditional lstm using dynamic rnn took 9.973556995391846 seconds\n",
+      "final loss value is 4.16509\n"
      ]
     }
    ],
    "source": [
     "tf.reset_default_graph()\n",
     "with Timed('traditional lstm using dynamic rnn'), tf.Graph().as_default():\n",
-    "    graph = build_multi_lstm_graph_with_list(use_gfr=False, use_dynamic_run=True)\n",
-    "    train_rnn(graph, 10)"
+    "    graph = build_multi_rnn_graph_with_list(use_gfr=False, use_dynamic_run=True, use_gru_cell=False)\n",
+    "    losses = train_rnn(graph, 10)\n",
+    "print('final loss value is', losses[-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10/10 [==============================] - 19s - loss: 4.1680    \n",
+      "10/10 [==============================] - 6s - loss: 4.1753     \n",
       "\n",
-      "running gated feedback lstm using dynamic run took 24.0576920509 seconds\n"
+      "running traditional gru using dynamic rnn took 9.974262952804565 seconds\n",
+      "final loss value is 4.16786\n"
+     ]
+    }
+   ],
+   "source": [
+    "tf.reset_default_graph()\n",
+    "with Timed('traditional gru using dynamic rnn'), tf.Graph().as_default():\n",
+    "    graph = build_multi_rnn_graph_with_list(use_gfr=False, use_dynamic_run=True, use_gru_cell=True)\n",
+    "    losses = train_rnn(graph, 10)\n",
+    "print('final loss value is', losses[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10/10 [==============================] - 11s - loss: 4.1744    \n",
+      "\n",
+      "running gated feedback lstm using dynamic run took 15.97345519065857 seconds\n",
+      "final loss value is 4.16474\n"
      ]
     }
    ],
    "source": [
     "tf.reset_default_graph()\n",
     "with Timed('gated feedback lstm using dynamic run'), tf.Graph().as_default():\n",
-    "    graph = build_multi_lstm_graph_with_list(use_gfr=True, use_dynamic_run=True)\n",
-    "    train_rnn(graph, 10)"
+    "    graph = build_multi_rnn_graph_with_list(use_gfr=True, use_dynamic_run=True, use_gru_cell=False)\n",
+    "    losses = train_rnn(graph, 10)\n",
+    "print('final loss value is', losses[-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10/10 [==============================] - 11s - loss: 4.1651    \n",
+      "\n",
+      "running gated feedback gru using dynamic run took 15.520256757736206 seconds\n",
+      "final loss value is 4.15529\n"
+     ]
+    }
+   ],
+   "source": [
+    "tf.reset_default_graph()\n",
+    "with Timed('gated feedback gru using dynamic run'), tf.Graph().as_default():\n",
+    "    graph = build_multi_rnn_graph_with_list(use_gfr=True, use_dynamic_run=True, use_gru_cell=True)\n",
+    "    losses = train_rnn(graph, 10)\n",
+    "print('final loss value is', losses[-1])"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
